--- a/TODO
+++ b/TODO
@@ -2,9 +2,13 @@
 - Add additional decompiler actions
 
 Feature Additions:
-- sign extension and 2's complement
-- endianness conversion
++ 2's complement
+  - Allow for negative display values to be converted to twos complement
 - hashing operations
 - exporting/importing history windows
     - saving/loading sessions
 - batch operations on multiple selected values
+- Make bottom panel into a cardLayout and allow swapping between quick ops, hash ops, etc
+- Add settings menu
+    - Enable/Disable Quick Operations panel
+    - enable/disable hash operations panel
