Add new features: Hashing operations, 2's complement, clickable bit display, endian swapping (#5)
* Changed colors to pull from theme. Added Number ops panel (WIP) and Hash Ops panel (WIP)

* Implemented 64-bit binary bit display that allows bits to be flipped when clicked.

* Added 2's complement operation. Added bitWidth member variable to the model. Modified the display input field to show the current bitwidth.

* Made the bitwidth display text clickable to toggle between 8, 16, 32, and 64

* Added endianness swapping operation.

* Added hashing ops tab to calculator gui

* Added right click action to calculate all hashes from a listing selection

* Added more hash algorithms

* Add toggle button in toolbar to show/hide the extras panel

* Updated screenshots, readme, and user guide

--- a/TODO
+++ b/TODO
@@ -2,9 +2,8 @@
 - Add additional decompiler actions
 
 Feature Additions:
-- sign extension and 2's complement
-- endianness conversion
-- hashing operations
++ 2's complement
+  - Allow for negative display values to be converted to twos complement?
 - exporting/importing history windows
     - saving/loading sessions
 - batch operations on multiple selected values
